# GetCourseBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VIDEO_STREAMING_API.md  collect_code.py  docker-compose.yml  main.py  pyproject.toml  restart_bots.sh  texts.json
src/: internal_webhooks.py  states.py
src/bot/: main.py
src/core/: config.py  settings.py  text.py
src/handlers/: assigment.py  assignment.py  calendar.py  course.py  lesson.py  registration.py  start.py
src/keyboards/: main_menu_kb.py  pagination_kb.py
src/misc/: course_utils.py  fabrics.py  init_data_generator.py  validator.py
src/services/: application_client.py
