[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["kamran <diyeqo@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"
redis = "^5.0.1"
validators = "^0.22.0"
asgiref = "^3.7.2"
watchgod = "^0.8.2"
yookassa = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bot = "src.bot.main:entrypoint"
